src/objects/ffbc__QuantityBreak__c.object
<CustomObject>
    <customHelpPage>ffbc__quantitybreakshelp</customHelpPage>
    <description>Contains a unit price to be applied when a certain quantity is reached on a contract line item.</description>
    <fields>
        <fullName>ffbc__PricingStructure__c</fullName>
        <description>Lookup to the pricing structure to which this quantity break belongs.</description>
        <inlineHelpText>Lookup to the pricing structure to which this quantity break belongs.</inlineHelpText>
        <label>Pricing Structure</label>
        <referenceTo>ffbc__PricingStructure__c</referenceTo>
        <relationshipLabel>Quantity Breaks</relationshipLabel>
        <relationshipName>QuantityBreaks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbc__QuantityBreakId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>An identifier which is used to prevent quantity breaks being duplicated.</description>
        <inlineHelpText>An identifier which is used to prevent quantity breaks being duplicated.</inlineHelpText>
        <label>Quantity Break ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffbc__Quantity__c</fullName>
        <description>Lowest quantity at which this price break is applied. The Unit Price is applied for Quantities above this amount up to the next price break if there is one.</description>
        <inlineHelpText>Lowest quantity at which this price break is applied. The Unit Price is applied for Quantities above this amount up to the next price break if there is one.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitPrice__c</fullName>
        <description>Price of one item when the Quantity or Usage of a contract line item falls into this quantity break.</description>
        <inlineHelpText>Price of one item when the Quantity or Usage of a contract line item falls into this quantity break.</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Quantity Break</label>
    <nameField>
        <displayFormat>QB{0000000000}</displayFormat>
        <label>Quantity Break Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quantity Breaks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>